<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tv_title"
        style="@style/title"
        android:layout_width="216dp"
        android:layout_height="94dp"
        android:text="@string/title_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="303dp"
        android:layout_height="188dp"
        android:src="@drawable/welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="327dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/name_placeholder"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/textView"
        style="@style/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_categories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        app:layout_constraintVertical_bias="0.113" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.166">


        <CheckBox
            android:id="@+id/cb_all"
            android:layout_width="248dp"
            android:layout_height="wrap_content"
            android:text="@string/check_all" />

        <CheckBox
            android:id="@+id/cb_sports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_sports" />

        <CheckBox
            android:id="@+id/cb_technology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_technology" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_continue"
        style="@style/btn_primary"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:text="@string/btn_continue"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.619" />


</androidx.constraintlayout.widget.ConstraintLayout>