<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_background"
    tools:context=".WelcomeFragment">


    <TextView
        android:id="@+id/tv_welcome"
        style="@style/title"
        android:layout_width="338dp"
        android:layout_height="285dp"
        android:text="@string/tv_title_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="240dp"
        android:layout_height="70dp"
        android:text="@string/age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:layout_constraintVertical_bias="0.339" />

    <Button
        android:id="@+id/btn_feed"
        style="@style/btn_primary_app"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:text="@string/btn_feed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintVertical_bias="0.51" />

</androidx.constraintlayout.widget.ConstraintLayout>